--- a/nginx.config
+++ b/nginx.config
@@ -3,8 +3,13 @@ server {
         resolver 8.8.8.8; #This is needed for resolving with proxypass.
         proxy_buffering off;
         proxy_ssl_session_reuse off;
+	
+	location /{
+	root /your/vhost/directory;
+        index candlestick.html;	
+	}
 
-       location ~* ^/coinbase/(.*) {
+	location ~* ^/coinbase/(.*) {
             proxy_set_header Host coinbase.com;
             proxy_pass  https://coinbase.com/api/v1/$1$is_args$args;
         }
