fix nginx config

--- a/nginx.config
+++ b/nginx.config
@@ -1,16 +1,21 @@
 server {
-        server_name your.vhost.tld;
-        resolver 8.8.8.8; #This is needed for resolving with proxypass.
-        proxy_buffering off;
-        proxy_ssl_session_reuse off;
-	
-	location /{
-	root /your/vhost/directory;
-        index candlestick.html;	
-	}
 
-	location ~* ^/coinbase/(.*) {
-            proxy_set_header Host coinbase.com;
-            proxy_pass  https://coinbase.com/api/v1/$1$is_args$args;
+        # server_name example.com;
+        # access_log /var/log/nginx/coinbasecandle.access_log;
+        # error_log /var/log/nginx/coinbasecandle.error_log;
+
+        location / {
+            root /var/www/;
+            try_files $uri $uri/candlestick.html @api;
         }
+
+        location @api {
+            proxy_buffering off;
+            proxy_ssl_session_reuse off;
+            proxy_set_header Host coinbase.com;
+            proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie;
+            proxy_pass  https://coinbase.com;
+        }
+
 }
+
